fixed some broken css due to the merge

--- a/frontend/src/Components/Contact/Contact.css
+++ b/frontend/src/Components/Contact/Contact.css
@@ -1,11 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;500;600;700&family=Lemon&family=Open+Sans:wght@400;600&family=Titillium+Web:ital,wght@0,300;0,700;1,400&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
-}
+
 
 section {
   padding: 20px 15%;
@@ -62,23 +57,24 @@ form textarea {
 }
 
 .contact-form form .btn {
-  display: inline-block;
-  background-color: #e35969;
-  font-size: 1.1rem;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-weight: 600;
-  border: 2px solid transparent;
-  border-radius: 10p;
-  width: 220px;
-  transition: ease 0.2s;
-  cursor: pointer;
+  background-color: transparent;
+  border: #e35969 solid 0.1rem;
+  border-radius: 20px;
+  padding: 5px 10px;
+  width: 15vh;
+  color: #e35969;
+  text-decoration: none;
 }
 
 .contact-form form .btn:hover {
-  border: 2px solid #e35969;
-  background: transparent;
-  transform: scale(1.1);
+  background-color: #e35969;
+  cursor: pointer;
+  color: #000;
+}
+.contact-form form .btn:active{
+  background-color: #101010;
+  cursor: pointer;
+  color: #e35969;
 }
 
 @media (max-width: 1570px) {
