--- a/frontend/src/Components/MyWork/MyWork.css
+++ b/frontend/src/Components/MyWork/MyWork.css
@@ -1,6 +1,10 @@
 
 
-
+.fullCard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .card:hover{
     filter: drop-shadow(4px 5px 1px #000000cc);
